--- a/Website/phone_website-master/styles.css
+++ b/Website/phone_website-master/styles.css
@@ -85,6 +85,7 @@ Navigation
   position: relative;
   height: 7rem;
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+  padding-right: 10%;
 }
 
 .nav {
@@ -94,6 +95,7 @@ Navigation
   height: 100%;
   height: 7rem;
   padding: 0 1rem;
+  padding-right: 0%;
 }
 
 .fix__nav {
@@ -103,6 +105,7 @@ Navigation
   width: 100%;
   background-color: var(--white);
   z-index: 1200;
+  padding-right: 0%;
 }
 
 .nav__logo a {
@@ -112,6 +115,7 @@ Navigation
   font-weight: 700;
   padding-left: 50px;
   width: 50%;
+  padding-right: 0%;
 }
 
 .nav__hamburger {
@@ -138,6 +142,7 @@ Navigation
   height: 100%;
   width: 60%;
   float: none;
+  padding-left: 12%;
 }
 
 .nav__item:not(:last-child) {
@@ -160,6 +165,7 @@ Navigation
 .nav__icons {
   display: flex;
   position: relative;
+  padding-left: 10%;
 }
 
 .nav__icons .icon__item svg {
@@ -402,6 +408,7 @@ Hero Area
 
 .hero__left {
   padding: 0 3rem;
+  padding-left: 10%;
   flex: 0 0 50%;
 }
 
