--- a/styles.css
+++ b/styles.css
@@ -285,9 +285,10 @@ Navigation Media Query
   }
   .nav__category {
     /* color: var(--white); */
-    background-color: #000;
-    font-size: 2.3rem;
+    background-color: transparent;
+    font-size: 1.5rem;
     font-weight: 700;
+    color: #f1f1f1;
   }
   .nav__list {
     flex-direction: column;
